<resources>
    <string name="app_name">AndroidLearning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop_ble">Stop BLE</string>
    <string name="start_ble">Start BLE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_database">Database</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_category_id">Enter Category Id</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="no_error">No Error</string>
    <string name="save_with_sqldelight">Save with SQLDelight</string>
    <string name="get_all_categories">Get All Categories</string>
</resources>